[project]
name = "langgraph-react"
version = "0.1.0"
description = "LangGraph ReAct agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langgraph",
    "langchain-openai",
    "langchainhub",
    "black",
    "isort",
    "python-dotenv",
    "langchain-tavily",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "nodes.py", "react.py"]
