[project]
name = "langgaph-course"
version = "0.1.0"
description = "LangGraph reflexion agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langgraph",
    "langchain-openai",
    "python-dotenv",
    "black",
    "isort",
    "langchain-tavily",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "chains.py", "schemas.py", "tool_executor.py"]
